Closed Bug 1678907 Opened 4 years ago Closed 4 years ago

gfx.webrender.all does not force hardware WebRender for qualified software WebRender configs

Categories

(Core :: Graphics: WebRender, defect, P3)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox83 --- unaffected
firefox84 --- unaffected
firefox85 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Blocks: sw-wr, wr-linux
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0eafb8895b7f
Allow gfx.webrender.all to override software WebRender allowlist. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: