Bug 1678907 - Allow gfx.webrender.all to override software WebRender allowlist. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D97858