gfx/config/gfxConfigManager.cpp
@@ -120,7 +120,7 @@ void gfxConfigManager::ConfigureWebRenderSoftware() {
   // (hardware). See bug 1656811.
   if (mWrSoftwareForceEnabled) {
     mFeatureWrSoftware->UserForceEnable("Force enabled by pref");
-  } else if (mWrEnvForceEnabled) {
+  } else if (mWrForceEnabled || mWrEnvForceEnabled) {
     mFeatureWrSoftware->UserDisable(
         "User force-enabled full WR",
         "FEATURE_FAILURE_USER_FORCE_ENABLED_FULL_WR"_ns);
